--- a/roles/haProxy/tasks/setup-RedHat.yml
+++ b/roles/haProxy/tasks/setup-RedHat.yml
@@ -1,7 +1,30 @@
 ---
+- name: "Stop the server if already running"
+  systemd:
+    name: haproxy
+    state: stopped
+
 - name: Install haproxy package
   yum:
     name: haproxy
     state: present
     update_cache: yes  
+    
+- name: "Copying config file haproxy.cfg"
+  template:
+     src: haproxy.cfg
+     dest: /etc/haproxy/
+     mode: 0644
 
+- name: "Updating haproxy config file"
+  lineinfile:
+    path: /etc/haproxy/haproxy.cfg
+    line: "    server {{ hostvars[item].inventory_hostname }} {{ hostvars[item].ansible_host }}:{{ hostvars[item].port }} check"
+    state: present
+  with_items: "{{ groups[backend_server_group] }}"
+
+- name: "Starting Haproxy Server"
+  systemd:
+    name: haproxy
+    state: started
+    enabled: yes
