--- a/xlr_inventory.yml
+++ b/xlr_inventory.yml
@@ -1,9 +1,12 @@
 [ha_proxy]
-ha1 ansible_host=
+ha1 ansible_host=192.168.0.107 backend_server_group=xlr_master
 
 [nfs_server]
-nfs1 ansible_host=
+nfs1 ansible_host=192.168.0.107 export_path=/xlr_share mount_group=xlr_master
+
+[postgres_db]
+db ansible_host=192.168.0.107 port=2532
 
 [xlr_master]
-master1 ansible_host=
-master2 ansible_host=
+master1 ansible_host=192.168.0.108 port=5516
+master2 ansible_host=192.168.0.109 port=5516
