postgres working stack

--- a/roles/haProxy/tasks/setup-RedHat.yml
+++ b/roles/haProxy/tasks/setup-RedHat.yml
@@ -1,10 +1,5 @@
 ---
-- name: "Stop the server if already running"
-  systemd:
-    name: haproxy
-    state: stopped
-
-- name: Install haproxy package
+- name: "Install haproxy package"
   yum:
     name: haproxy
     state: present
