--- a/xlr_playbook.yml
+++ b/xlr_playbook.yml
@@ -4,13 +4,13 @@
 #  become: yes
 #  roles: 
 #    - haProxy
-
+#
 #- name: Setup NFS server
 #  hosts: nfs_server
 #  become: yes
 #  roles:
 #    - nfsServer
-    
+#   
 #- name: Setup Nfs mount points
 #  hosts: xlr_master
 #  become: yes
@@ -18,19 +18,18 @@
 #    - nfsClient
 #  vars:
 #    nfs_server_group: "nfs_server"
+#
+#- name: Setup postgres db
+#  hosts: db
+#  become: yes
+#  roles:
+#    - postgres
+#  vars:
+#    config: "xlr"
 
-- name: Setup postgres db
-  hosts: db
+- name: Setup XLR instance
+  serial: 1
+  hosts: xlr_master
   become: yes
   roles:
-    - postgres
-  vars:
-    config: "xlr"
-
-    
-      #
-      #- name: Setup XLR instance
-      #  hosts: xlr_master
-      #  become: yes
-      #  roles:
-      #    - xlRelease  
+    - xlRelease  
