--- a/roles/xlRelease/templates/xl-release.conf
+++ b/roles/xlRelease/templates/xl-release.conf
@@ -13,17 +13,17 @@ xl {
     }
               node {
                 clusterPort = 5531
-                hostname = "{{ hostvars[item].ansible_host }}"
-                id = "{{ hostvars[item].inventory_hostname }}"
+                hostname = "{{ ansible_host }}"
+                id = "{{ inventory_hostname }}"
             }
 
   }
 
   database {
     db-driver-classname="org.postgresql.Driver"
-    db-password="xl-release"
-    db-url="jdbc:postgresql://xlr-db-postgres:5432/xlrelease"
-    db-username=xl-release
+    db-password="xlrelease"
+    db-url="jdbc:postgresql://{{ hostvars[groups['postgres_db'].0].ansible_host }}:5432/xlrelease"
+    db-username=xlrelease
     max-pool-size=10
   }
 
@@ -35,7 +35,7 @@ xl {
     }
     db-driver-classname="org.postgresql.Driver"
     db-password="xlarchive"
-    db-url="jdbc:postgresql://xlr-db-postgres:5432/xlarchive"
+    db-url="jdbc:postgresql://{{ hostvars[groups['postgres_db'].0].ansible_host }}:5432/xlarchive"
     db-username=xlarchive
   }
 
