Updated xlr role

--- a/roles/haProxy/tasks/setup-RedHat.yml
+++ b/roles/haProxy/tasks/setup-RedHat.yml
@@ -18,6 +18,9 @@
     state: present
   with_items: "{{ groups[backend_server_group] }}"
 
+- name: "update selinux for haproxy"
+  shell: setsebool -P haproxy_connect_any=1  
+  
 - name: "Starting Haproxy Server"
   systemd:
     name: haproxy
