--- a/vagrant/centos/Vagrantfile
+++ b/vagrant/centos/Vagrantfile
@@ -22,6 +22,10 @@ Vagrant.configure("2") do |config|
     first.vm.box = "centos/7"
     first.vm.network "public_network", ip: "192.168.0.102", bridge: "wlp9s0"
     first.vm.provision "shell", inline: "echo First VM is up"
+    first.vm.provider :virtualbox do |vb|
+        vb.memory = 1024
+        vb.cpus = 2
+    end
   end
 
   config.vm.define "second" do |second|
